// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly expenses summary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $2.23
  </h3>
</div>
`;

exports[`render correctly expenses summary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h3>
</div>
`;
